<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_title_general">

        <EditTextPreference android:key="user_name"
            android:title="@string/user_name"
            android:summary="@string/user_name_description"/>

        <EditTextPreference android:key="user_email"
            android:title="@string/user_email"
            android:summary="@string/user_email_description"/>

        <EditTextPreference android:key="user_department"
            android:title="@string/user_department"
            android:summary="@string/user_department_description"/>

        <EditTextPreference android:key="user_role"
            android:title="@string/user_role"
            android:summary="@string/user_role_description"/>

        <EditTextPreference android:key="user_ama"
            android:title="@string/user_ama"
            android:summary="@string/user_ama_description"/>

        <ListPreference android:key="user_location"
            android:title="@string/user_location"
            android:summary="@string/user_location_description"
            android:entries="@array/list_user_locations"
            android:entryValues="@array/list_user_locations_values"
            android:dialogTitle="@string/user_location">
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>